package ItemClasses;

/**
 * Activity of Items, in most cases used in used() methods as parameter
 * - savingPeople
 * - clearingSnow
 * - puttingOnSuit
 * - putUpTent
 * - eatingFood
 */
public enum Activity {
    savingPeople,
    clearingSnow,
    puttingOnSuit,
    putUpTent,
    eatingFood;

}
